--- a/css/style.css
+++ b/css/style.css
@@ -464,6 +464,10 @@ pre {
   @media (min-width: 1200px) {
     .container {
       max-width: 1140px; } }
+  @media (min-width: 1600px) {
+    .container {
+      max-width: 1500px; } }
+
 
 .container-fluid {
   width: 100%;
