--- a/css/style.css
+++ b/css/style.css
@@ -464,9 +464,9 @@ pre {
   @media (min-width: 1200px) {
     .container {
       max-width: 1140px; } }
-  @media (min-width: 1600px) {
+  @media (min-width: 1300px) {
     .container {
-      max-width: 1500px; } }
+      max-width: 90%; } }
 
 
 .container-fluid {
